# Faculty-workload-AI-agent

./: .env.sample  .gitignore  Readme.md  config.py  main.py  pyproject.toml
agent/: agent.py  llm.py  tools.py
data/: faculty_workload.csv  policies.txt  timetable.csv
faculty_timetable_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: app.py
rag/: embeddings.py  ingest.py  retriever.py
utils/: csv_loader.py  timetable_utils.py  workload_utils.py
