[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faculty-timetable-agent"
version = "0.1.0"
description = "Generative AI Agent for Faculty Workload & Timetable Assistant using RAG + LLM"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # LLM & Agent Framework
    "langchain==0.2.16",
    "langchain-community==0.2.17",
    "langchain-groq==0.1.9",
    "langchain-text-splitters==0.2.4",
    "langchain-chroma==0.1.4",
    "langgraph==0.2.28",
    "langsmith==0.1.147",
    "groq>=0.11.0",

    # Embeddings & ML
    "sentence-transformers",
    "transformers",
    "tokenizers",
    "safetensors",
    "scikit-learn",
    "torch",

    # Vector Database
    "chromadb",
    "onnxruntime",

    # Data Handling
    "pandas",
    "numpy",
    "pyarrow",

    # Frontend
    "streamlit",
    "altair",
    "pydeck",
    "pillow",

    # HTTP & Async
    "httpx",
    "httpx-sse",
    "aiohttp",
    "anyio",

    # Utilities
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "tqdm",
    "tenacity",
    "PyYAML",
    "rich",
    "huggingface_hub",
    "SQLAlchemy",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "black>=24.4.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

gpu = [
    "triton",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-nccl-cu12",
]

[project.scripts]
timetable-agent = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "data*", "frontend*", "rag*", "utils*"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools]
py-modules = ["main", "config"]

# ---------------------------------------------------------------------------
# Black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"